# hello-helm

./: Makefile  README.md  compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
docs/: .doc-structure.txt  DEPLOYMENT.md  DOCKER-COMPOSE-VS-HELM.md  FRONTEND-DEPLOYMENT-PLAN.md  FRONTEND-TASK-SUMMARY.md  FULL-STACK-DEPLOYMENT-GUIDE.md  HELM-CHART-WALKTHROUGH.md  HELM-LEARNING-GUIDE.md  MAKEFILE-GUIDE.md  NEXT-STEPS.md  README-FRONTEND.txt  README.md
frontend/: Dockerfile  Dockerfile.prod  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/items/: route.ts
frontend/app/api/items/[id]/: route.ts
frontend/components/: item-dialog.tsx  items-manager.tsx
helm_charts/backend/: QUICK-START.md  README.md  STRUCTURE.md  TROUBLESHOOTING-NOTES.md  deploy-local.sh  values-local.yaml  values.yaml
helm_charts/backend/templates/: deployment.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml
helm_charts/frontend/: Chart.yaml  QUICK-START.md  README.md  deploy-local.sh  values.yaml
helm_charts/frontend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
