[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
